# gmailExtract

./: .gitignore  LICENSE  README.md  pyproject.toml
gmailExtract/: __main__.py
